geek_tutorial/ingress/apple.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-apple
spec:
  selector:
    app: hello-apple
  ports:
  - port: 5000
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-apple
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-apple
  template:
    metadata:
      labels:
        app: hello-apple
    spec:
      containers:
      - name: hello-gke
        image: gcr.io/geekbang-gke/hello-apple:latest
        ports:
        - containerPort: 5000
